fixing the overflow at minimum size screens

--- a/styles.css
+++ b/styles.css
@@ -210,7 +210,7 @@ input[type="radio"] {
      
 } 
 
-@media only screen and (max-width: 460px) { 
+@media only screen and (max-width: 410px) { 
 
     .main-content, #survey-form {
         grid-template-columns: 100vw;
@@ -226,5 +226,8 @@ input[type="radio"] {
      grid-template-rows: 120px 1380px;
     }
  
+    input[type="checkbox"] {
+        font-size: 14px;
+      }
 } 
 
